--- a/Reader/Reader.vcxproj.filters
+++ b/Reader/Reader.vcxproj.filters
@@ -25,6 +25,9 @@
     <None Include="book.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="loading.gif">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
