--- a/Reader/Reader.vcxproj.filters
+++ b/Reader/Reader.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="dump.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Keyset.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="dump.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Keyset.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
