--- a/Reader/Reader.vcxproj.filters
+++ b/Reader/Reader.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="Editctrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DPIAwareness.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -117,6 +120,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Editctrl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DPIAwareness.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
