--- a/Reader/Reader.vcxproj.filters
+++ b/Reader/Reader.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="barcode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tagset.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -132,6 +135,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Advset.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tagset.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
