用libmobi增加了mobi格式的支持，对一部分KF7格式的mobi文件支持不好，主要是目录生成问题。 由于reader本身架构的限制，只支持封面一张图片。 要支持多图的形式，需要改变渲染方式，做出xml->渲染显示的引擎。等我有空找找看有没有现成的吧。

--- a/Reader/Reader.vcxproj.filters
+++ b/Reader/Reader.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="..\opensrc\cjson\cJSON.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MobiBook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Reader.cpp">
@@ -156,6 +159,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\opensrc\cjson\cJSON.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MobiBook.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
